# ChangeLog for gnome-extra/gnome-utils
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.229 2012/04/16 17:32:38 tetromino Exp $

  16 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-utils-3.2.1.ebuild, +files/gnome-utils-3.2.1-glib-2.32-gtk-3.4.patch,
  -files/gnome-utils-3.2.1-gtk+-3.4-ft2.patch:
  Properly fix building with glib-2.32; thanks to Yaw_e for reporting.

  16 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-utils-2.32.0-r2.ebuild, gnome-utils-3.2.1.ebuild:
  Fix sed in Estonian locale, thanks to Priit Laes.

  15 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-utils-3.2.1.ebuild, +files/gnome-utils-3.2.1-gtk+-3.4-ft2.patch:
  Fix building with gtk+-3.4 (bug #411939, thanks to Ingo Gottwald for
  reporting).

  01 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-utils-2.32.0-r2.ebuild:
  Move gnome2_src_prepare after eautoreconf (bug #396713, thanks to Julian W.
  for reporting).

  05 Dec 2011; Pacho Ramos <pacho@gentoo.org> -gnome-utils-2.32.0-r1.ebuild,
  gnome-utils-3.2.1.ebuild:
  Drop old and fix description, bug #393143 by Justin Lecher.

*gnome-utils-3.2.1 (06 Nov 2011)

  06 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gnome-utils-3.0.1.ebuild, +gnome-utils-3.2.1.ebuild:
  Bump to 3.2.1 from the gnome overlay, drop old. Notable changes: improved
  screenshot tool.

  05 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gnome-utils-2.32.0-r2.ebuild:
  ppc/ppc64 stable wrt #369909

*gnome-utils-3.0.1 (19 Aug 2011)

  19 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +gnome-utils-3.0.1.ebuild:
  Bump to 3.0.1, from gnome overlay for GNOME 3

  13 Aug 2011; Raúl Porcel <armin76@gentoo.org> gnome-utils-2.32.0-r2.ebuild:
  alpha/ia64/sh/sparc stable wrt #369909

  17 Jul 2011; Markus Meier <maekke@gentoo.org> gnome-utils-2.32.0-r2.ebuild:
  arm stable, bug #369909
