@@ -8,18 +8,18 @@ AUX gnome-utils-3.2.1-glib-2.32-gtk-3.4.patch 1676 RMD160 29af827aaad26190620dac
 DIST gnome-utils-2.32.0-icons.tar.xz 153632 RMD160 3e0f88fced7ab807a425de67ce90834894a41b70 SHA1 231f49f11233c1bf5f95763f12d1447fee2c222c SHA256 234e86914fa49daf3b11ffe7efb7090a3caf4146dce41414724b597e0e9c508e
 DIST gnome-utils-2.32.0.tar.bz2 7705320 RMD160 c25667eec2ba4fd0d704c10a92e2e6b071eb1bfc SHA1 68ef7e12280969bde9bee4bbd566ad4ab0572e77 SHA256 033a55cf442096b28ea6292043354feafe000d1e5f4ebb962a9b6d72eb9a93fa
 DIST gnome-utils-3.2.1.tar.xz 7273572 RMD160 a0e34b7057c0b77b58f7310ec8a8a3af238071bd SHA1 2f837a420ea73ad1a1cab56656b450e704f2faab SHA256 3ac1942dbf4d9d394e2fcc5f30a4480b1b1e5d44ee0c2d4f61689f4a221ba328
-EBUILD gnome-utils-2.32.0-r2.ebuild 2524 RMD160 f6536e2f9ac540a55cd695e6f90155a452bd27b9 SHA1 9a32d69497e62148c8de1229af5026764deb0bfa SHA256 f00483817e5a415afb44e023a4b3b423aef6d6935142f61c928d85c8573dc08b
-EBUILD gnome-utils-3.2.1.ebuild 2166 RMD160 94310042c9b677e3bbde9e2c68c9c17b8bdacedd SHA1 8afcf8b2cb823f2a65f459be4771aa2e052eaaab SHA256 b1194b2d447b764807fcf66637d4b8dbc80c0ecf62e9d332909cf443f63b9a6b
-MISC ChangeLog 29677 RMD160 02ed4c115973eb03501f6c535031cab1ba9a7554 SHA1 434789f346a65eaad506219ca00ab53d5c0bfc37 SHA256 e77e34c8fb6fc00cd4d9317968f07c5f4a391cac1c4089496c2d4e1ee1330263
+EBUILD gnome-utils-2.32.0-r2.ebuild 2517 RMD160 40e2373a38a96742b947ca413e190c9d65f0e18a SHA1 9051eadff7de83e61bd1f55e67f50b5a1839e7d1 SHA256 10f2ac17f0d2a4bb4b9c501462d04c48df1d6f43909fd7ca71dea79d6421d79a
+EBUILD gnome-utils-3.2.1.ebuild 2270 RMD160 8b00075a67320daf2949e767b784ec2edaec2a55 SHA1 17415185594fd46674c208c093be2a707b9fb9c9 SHA256 bb97387888fd5aad755713c4a2d05a9b9c66d97d076cf4ca2ca5bcc1473405d8
+MISC ChangeLog 29924 RMD160 3b397631a60fdef06b622f1c287a9a7a9089d078 SHA1 8c10cd56c75d45b616738263d42098a98f1a2f63 SHA256 de9942527cf33a2889beddeb683a3d57794caa7c47c89c47e54e946943820f61
 MISC metadata.xml 305 RMD160 c788a49e4dc8332a8f5a5a79268ed2bff3d164c8 SHA1 9aa1970fee27c41f0eebf198f94b1fa41b3644b9 SHA256 3c6d345a89e0c8dbacd26f232e8220bd2558bc90cff9041e3e07f2f44ce4bb85
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPjFe7AAoJEJ0WA1zPCt1hm38IAI0Up28/d+pJAAegsEGmTtcL
-5H/UVG7vFqHKUF0T6iuEpnF4Aa3sw0ljTGTlTQEAiyB7jwU3FHfHZS/Y0lq5zRmO
-Ogc1WKE9rFKoPMC7oCRjC4qPTRRgo1dBlAEdjD2ur4m3n2TP3xzFHC0761hQkcty
-hzdnKvjSVkG7/Fy8dAKtrnk1VQ8SmxBaPHmDLm+tMNmpcLrVrKVR2nr01vkR9rlT
-XFsjG5xojY2xwfLieIXdXOLz/oo3MAuTQR7KdFCQ4FMOQCawSiYSxxUQlJERlWEF
-KYvQTNUIC4bzRa8Gr62MVHh+8/RJdsn0KholjDzMBlYdYRYfqv7abj+MTVvF+Ok=
-=lUrz
+iQEcBAEBAgAGBQJPpI76AAoJEJ0WA1zPCt1hcFcH/RUYS9n0V4pLO3HieLwtiTfP
+SUA025SoKjCbE6OJxrP8jNvg7B4t+yilUWtyZXj8jSvJk7Z/WsdMpS53twJ87L27
+YNWJqVJ/u3Z+tpyrqN5Cl8Hswhl0on1TPg8hxSHjwX9PdVpLHRK1Gjdpi6Ks65zz
+BA1jZnpABPmofdYWVbQll2Ljla550XClJzmcYKSZGOK7BNuoPApWjMQ/ZEoLMXIN
+yRKXzKVVGwoGWbd3NFkFwItGIwhQaIeS8kigaAdFB0gAwt/73VwY6viR7eijx3l3
+rVJlFyGWehAq6iv5e75cRgsbrDyb7fd5TYbhKAJubKz7EI0ki3qwMf+MGueRvro=
+=XXAM
 -----END PGP SIGNATURE-----
