@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome-utils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.229 2012/04/16 17:32:38 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.230 2012/05/05 02:22:38 tetromino Exp $
+
+  05 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  gnome-utils-2.32.0-r2.ebuild, gnome-utils-3.2.1.ebuild:
+  Add missing gtk-doc-am and gnome-common build-time deps (bug #414617, thanks
+  to Michael Weber). Update to virtual/pkgconfig.
 
   16 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   gnome-utils-3.2.1.ebuild, +files/gnome-utils-3.2.1-glib-2.32-gtk-3.4.patch,
